--- a/notebook/gabriel_EDA.ipynb
+++ b/notebook/gabriel_EDA.ipynb
@@ -8376,7 +8376,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e1aaaeea",
-        "outputId": "68ce1989-2e9e-4224-a017-92dd425c440e"
+        "outputId": "6e66eb81-b98d-47c5-84cd-8d7165914e5d"
       },
       "outputs": [
         {
@@ -8385,7 +8385,7 @@
           "text": [
             "Running on Google Colab\n",
             "GPU memory growth enabled.\n",
-            "Mon Jun  2 07:38:37 2025       \n",
+            "Mon Jun  2 08:40:03 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -8394,7 +8394,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   45C    P8              9W /   70W |       2MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   46C    P8              9W /   70W |       2MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -8475,7 +8475,7 @@
       ],
       "metadata": {
         "id": "tMPrlWOlLrun",
-        "outputId": "6c0018f8-4167-44d1-aaad-ecea9c14a8a7",
+        "outputId": "0bcdf7a0-99d3-4c62-fb33-6410fbc476c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -9050,10 +9050,10 @@
         "\n",
         "    # Load and preprocess\n",
         "    data = data.map(map_function)\n",
-        "    data = data.padded_batch(6, padded_shapes=([75, None, None, None], [40]))\n",
+        "    data = data.padded_batch(2, padded_shapes=([75, None, None, None], [40]))\n",
         "    data = data.prefetch(tf.data.AUTOTUNE)\n",
         "    # Train Test Split\n",
-        "    train_samples = int((total_num_videos/6) * 0.9)\n",
+        "    train_samples = int((total_num_videos/2) * 0.9)\n",
         "    train = data.take(train_samples)\n",
         "    test = data.skip(train_samples)\n",
         "\n",
@@ -9157,16 +9157,16 @@
         "        data = self.dataset.next()\n",
         "        yhat = self.model.predict(data[0])\n",
         "\n",
-        "        input_lengths = [tf.shape(yhat)[1].numpy()] * tf.shape(yhat)[0].numpy()\n",
+        "        # input_lengths = [tf.shape(yhat)[1].numpy()] * tf.shape(yhat)[0].numpy()\n",
         "\n",
-        "        decoded = tf.keras.backend.ctc_decode(yhat, input_lengths, greedy=False)[0][0].numpy()\n",
+        "        decoded = tf.keras.backend.ctc_decode(yhat, [75,75], greedy=False)[0][0].numpy()\n",
         "        for x in range(len(yhat)):\n",
         "            print('Original:', tf.strings.reduce_join(num_to_char(data[1][x])).numpy().decode('utf-8'))\n",
         "            print('Prediction:', tf.strings.reduce_join(num_to_char(decoded[x])).numpy().decode('utf-8'))\n",
         "            print('~'*100)\n",
         "\n",
         "def compile_model(model):\n",
-        "    adam = Adam(learning_rate=0.0003)\n",
+        "    adam = Adam(learning_rate=0.0001)\n",
         "    model.compile(optimizer=adam, loss=CTCLoss)\n",
         "    return model\n",
         "\n",
@@ -9201,7 +9201,7 @@
         "id": "DZxL0hw3VaQc"
       },
       "id": "DZxL0hw3VaQc",
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -9216,7 +9216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 11,
       "id": "6f4916e1",
       "metadata": {
         "id": "6f4916e1"
@@ -9247,17 +9247,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J6uyruZARYJf",
-        "outputId": "60314c89-28dc-4e29-ccff-abe423ced7d5"
+        "outputId": "eefc8c17-d5f0-4dea-f86e-05aa15f5ccb7"
       },
       "id": "J6uyruZARYJf",
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "train: 54\n",
-            "test: 6\n"
+            "train: 27\n",
+            "test: 3\n"
           ]
         }
       ]
@@ -9270,33 +9270,32 @@
       ],
       "metadata": {
         "id": "PfTOfIH5MLyQ",
-        "outputId": "8e4b8cda-6c4b-4d49-fbec-691363e2758c",
+        "outputId": "b020a4d8-6ef5-46cd-98d1-200d66a72982",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "PfTOfIH5MLyQ",
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(6, 75, 50, 100, 1)\n"
+            "(2, 75, 50, 100, 1)\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 14,
       "id": "nntvypEz8Q_5",
       "metadata": {
         "id": "nntvypEz8Q_5",
-        "outputId": "32744bee-b6a1-418c-83b1-769547408a9e",
+        "outputId": "e43c89c4-4b69-4cda-a35e-2a9430ee696e",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
@@ -9305,61 +9304,43 @@
           "name": "stdout",
           "text": [
             "Epoch 1/3\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2s/step\n",
-            "Original: bin blue by m zero now\n",
-            "Prediction:  \n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n",
+            "Original: bin blue by f nine again\n",
+            "Prediction: \n",
             "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: lay blue by k seven again\n",
-            "Prediction:  \n",
+            "Original: bin blue with g three again\n",
+            "Prediction: \n",
             "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: bin green at a eight please\n",
-            "Prediction:  \n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: bin red with a three soon\n",
-            "Prediction:  \n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: bin red in f six please\n",
-            "Prediction:  \n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: lay green with m seven soon\n",
-            "Prediction:  \n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m54/54\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1796s\u001b[0m 33s/step - loss: 127.5529 - val_loss: 91.0053 - learning_rate: 3.0000e-04\n",
+            "\u001b[1m27/27\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m281s\u001b[0m 10s/step - loss: 145.6290 - val_loss: 103.2082 - learning_rate: 1.0000e-04\n",
             "Epoch 2/3\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 472ms/step\n",
-            "Original: bin green at h three again\n",
-            "Prediction: b e e e \n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 168ms/step\n",
+            "Original: bin blue with t zero please\n",
+            "Prediction: b\n",
             "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: bin blue in e nine soon\n",
-            "Prediction: b e e e \n",
+            "Original: bin blue by s seven again\n",
+            "Prediction: \n",
             "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: lay blue at k two please\n",
-            "Prediction: b n e e e \n",
+            "\u001b[1m27/27\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m185s\u001b[0m 7s/step - loss: 104.8079 - val_loss: 95.3557 - learning_rate: 9.0484e-05\n",
+            "Epoch 3/3\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 161ms/step\n",
+            "Original: bin blue with g zero now\n",
+            "Prediction: b b b  \n",
             "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: lay blue by q eight now\n",
-            "Prediction: b e e e \n",
+            "Original: bin blue with t one again\n",
+            "Prediction: b b b  \n",
             "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: bin red at g one again\n",
-            "Prediction: b e e e \n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "Original: lay green with a zero please\n",
-            "Prediction: b n e e e \n",
-            "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-            "\u001b[1m54/54\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1160s\u001b[0m 21s/step - loss: 86.0153 - val_loss: 78.1438 - learning_rate: 3.0000e-04\n"
+            "\u001b[1m27/27\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m183s\u001b[0m 7s/step - loss: 95.6578 - val_loss: 79.6387 - learning_rate: 8.1873e-05\n"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "The output of the `schedule` function should be a float. Got: 0.00027145122294314206",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-9-f87ce186f4b7>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompile_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m model.fit(\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/keras/src/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    120\u001b[0m             \u001b[0;31m# To get the full stack trace, call:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m             \u001b[0;31m# `keras.config.disable_traceback_filtering()`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 122\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m             \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/keras/src/callbacks/learning_rate_scheduler.py\u001b[0m in \u001b[0;36mon_epoch_begin\u001b[0;34m(self, epoch, logs)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m             raise ValueError(\n\u001b[0m\u001b[1;32m     66\u001b[0m                 \u001b[0;34m\"The output of the `schedule` function should be a float. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m                 \u001b[0;34mf\"Got: {learning_rate}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: The output of the `schedule` function should be a float. Got: 0.00027145122294314206"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7ca380110610>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ],
       "source": [
